--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                             <span>Name des Spielers :</span>
                         </div>
                         <div >
-                            <input type="number" />
+                            <input type="text" />
                         </div>
                    </div>
                     <!-- Single Select Box -->
                     <div class="single-select-box mb-30">
                         <div class="boking-tittle">
-                            <span>Hole in Ones:</span>
+                            <span>Hits:</span>
                         </div>
                         <div class="select-this">
                             <form action="#">
@@ -134,18 +134,6 @@
                         </div>
                    </div>
                     <!-- Single Select Box -->
-                    <div class="single-select-box mb-30">
-                        <div class="boking-tittle">
-                            <span>PARs</span>
-                        </div>
-                        <div class="select-this">
-                            <form action="#">
-                                <div >
-                                    <input type="number" />
-                                </div>
-                            </form>
-                        </div>
-                   </div>
                     <!-- Single Select Box -->
                     <div class="single-select-box mb-30">
                    </div>
