--- a/courses.html
+++ b/courses.html
@@ -44,8 +44,8 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="courses.html">Courses</a></li>
+                                        <li><a href="index.php">Home</a></li>
+                                        <li><a href="courses.php">Courses</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -100,10 +100,10 @@
                         <!-- Single Room -->
                         <div class="single-room mb-50">
                             <div class="room-img">
-                               <a href="courses.html"><img src="assets/img/rooms/wien.jpg" alt=""></a>
+                               <a href="courses_overview.php?id={course.id}"><img src="assets/img/rooms/wien.jpg" alt=""></a>
                             </div>
                             <div class="room-caption">
-                                <h3><a href="courses.html">{course.name}</a></h3>
+                                <h3><a href="courses_overview.php?id={course.id}">{course.name}</a></h3>
                             </div>
                         </div>
                     </div>
