--- a/courses_overview.html
+++ b/courses_overview.html
@@ -44,8 +44,8 @@
                         <div class="main-menu f-right d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
+                                    <li><a href="index.php">Home</a></li>
+                                    <li><a href="courses.php">Courses</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
@@ -72,6 +72,7 @@
                         <div class="hero-caption">
                             <span>Course Overview</span>
                             <h2>{course_name}</h2>
+                            <h3>PAR: {parscore}</h3>
                         </div>
                     </div>
                 </div>
@@ -83,17 +84,12 @@
     <!-- Room Start -->
     <section class="room-area r-padding1">
         <div class="container">
+            <f:for each = "{scores}" as = "score">
             <div class="row justify-content-center">
-                <div class="col-xl-8">
-                    <!--font-back-tittle  -->
-                </div>
+                Name : {score.player} | Hits: {score.hits}
             </div>
-
-            <div class="row justify-content-center">
-                <div class="room-btn pt-70">
-                    <a href="#" class="btn view-btn1">View more  <i class="ti-angle-right"></i> </a>
-                </div>
-            </div>
+                <hr>
+            </f:for>
         </div>
 
     </section>
